--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <div class="title"><span>About Me</span></div>
         <div class="about-details">
           <div class="left">
-            <img src="/resize.jpg" alt="" style="margin-left: -17px;margin-top:-56px; border:4px;border-radius:20px;
+            <img src="/images/resize.jpg" alt="" style="margin-left: -17px;margin-top:-56px; border:4px;border-radius:20px;
             " />
           </div>
           <div class="right">
